# tianyaochou.github.io

./: 404.html  CNAME  Gemfile  _config.yml  about.md  blog.cabal  contact.markdown  feed.xml  flake.nix  index.html  site.hs  stack.yaml
_drafts/: new-ping-pong-racket.md
_posts/: 2020-09-26-welcome-to-jekyll.markdown
about/: index.html
assets/css/: style.css  style.css.map
css/: default.css  vertical.css
docs/: contact.html  index.html
docs/_site/: contact.html
docs/_site/css/: default.css  vertical.css
docs/_site/posts/: 2015-08-23-example.html  2015-08-24-vertical.html
docs/blog/: index.html
docs/css/: default.css
docs/posts/: 2015-08-23-example.html  2015-08-24-vertical.html  2024-08-14-devshell-without-copying-entire-tree.html
docs/resume/: index.html
jekyll/update/2020/09/26/: welcome-to-jekyll.html
lib/: Helper.hs
posts/: 2015-08-24-vertical.md  2024-08-14-devshell-without-copying-entire-tree.md
resume/: index.md  resume.json
templates/: default.html
templates/blog/: post.html
templates/ede/: resume.html
