cabal-version:       2.2

name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blog#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll, blog, aeson, hakyll-ede
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded

library
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       aeson >= 2.2, bytestring, unordered-containers,
                       vector, text, binary, binary-instances, ede >= 0.3
  hs-source-dirs:      lib
  exposed-modules:     Helper
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
